Bug 159637 - Crash in PlaceEditDialog::SelectType(bool)
Summary: Crash in PlaceEditDialog::SelectType(bool)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.8.0 target:24.2.1
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2024-02-08 10:53 UTC by Xisco Faulí
Modified: 2024-02-08 16:27 UTC (History)
1 user (show)

See Also:
Crash report or crash signature: ["PlaceEditDialog::SelectType(bool)"


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2024-02-08 10:53:49 UTC
Steps to reproduce:
1. Open LibreOffice
2. Remote Files
3. Add Service
4. Select Windows Share

-> Crash

Reproduced in

Version: 24.2.1.0.0+ (X86_64) / LibreOffice Community
Build ID: e4cc4aefc6715a54b140b6c962bff5af9f39dc37
CPU threads: 16; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2024-02-08 12:39:33 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a381e87d16496d9fee98d9ff49fa2a38cc5c8fb2

tdf#159637: fix position of 'Windows Share' entry

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-02-08 16:27:10 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/977b8cf668a486cc8781cbfeebd4f9bdff3edc5f

tdf#159637: fix position of 'Windows Share' entry

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.