tdf#159637: fix position of 'Windows Share' entry

Started to happen after

commit b91daea3c1a38883c06cdd63c6eababe1df9e61d
Author: Michael Stahl <michael.stahl@allotropia.de>
Date:   Tue Nov 7 13:20:21 2023 +0100

    tdf#146386 fpicker,svtools: remove FTP from Remote Files dialog

Change-Id: I6ae78f96c1a1271de8cb2f0f114b92c3c213a068
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163115
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit a381e87d16496d9fee98d9ff49fa2a38cc5c8fb2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163140
Tested-by: Jenkins
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>